# cpputest_template

./: .gitignore  CMakeLists.txt  buildtest.sh
include/module/: module.h
src/: CMakeLists.txt
src/module/: module.c
tests/: CMakeLists.txt  allTests.cpp
tests/module/: moduleTests.cpp
